feat: - /event crud (for now no auth required - returning 409 when trying to delete place that is associated with existing events
docs:
- remove impossible response statuses in place and user get endpoints
- add 409 to /place/delete
