# polzunov-feast-server/src/main/java/com/example/polzunovfeastserver/event/entity/EventEntity.java
@@ -1,0 +1,40 @@
+package com.example.polzunovfeastserver.event.entity;
+
+import com.example.polzunovfeastserver.event.util.EventForeignKey;
+import com.example.polzunovfeastserver.place.entity.PlaceEntity;
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.OffsetDateTime;
+
+@Table(name = "events")
+@Entity
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class EventEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    @Column(name = "event_id")
+    private Long id;
+
+    @Column(name = "event_name")
+    private String name;
+
+    private String description;
+
+    @Column(name = "start_time")
+    private OffsetDateTime startTime;
+
+    @Column(name = "end_time")
+    private OffsetDateTime endTime;
+
+    @ManyToOne
+    @JoinColumn(
+            name = "place_id",
+            foreignKey = @ForeignKey(name = EventForeignKey.PLACE, value = ConstraintMode.CONSTRAINT)
+    )
+    private PlaceEntity place;
+}
