# polzunov-feast-server/src/main/java/com/example/polzunovfeastserver/place/PlaceExceptionHandler.java
@@ -1,14 +1,18 @@
 package com.example.polzunovfeastserver.place;
 
+import com.example.polzunovfeastserver.event.util.EventForeignKey;
 import com.example.polzunovfeastserver.place.excepition.PlaceNotFoundException;
 import lombok.extern.slf4j.Slf4j;
+import org.hibernate.exception.ConstraintViolationException;
 import org.openapitools.model.ErrorResponse;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import static org.springframework.http.HttpStatus.CONFLICT;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 @Slf4j
@@ -24,5 +28,30 @@ public class PlaceExceptionHandler {
         ErrorResponse response = new ErrorResponse();
         response.setMessage(message);
         return response;
+    }
+
+
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    @ResponseStatus(CONFLICT)
+    public ErrorResponse onDataIntegrityViolationException(DataIntegrityViolationException e) {
+        String message;
+        if (!(e.getCause() instanceof ConstraintViolationException cause)) {
+            message = "Data integrity violation: ";
+            log.warn(message, e);
+            ErrorResponse error = new ErrorResponse();
+            error.setMessage(message + e.getMessage());
+            return error;
+        }
+
+        //Foreign key constraints violation
+        if (cause.getConstraintName().equals(EventForeignKey.PLACE)) {
+            message = "Cannot delete place, because there are events associated with it";
+        } else {
+            message = String.format("Constraint '%s' violation: %s", cause.getConstraintName(), cause.getMessage());
+        }
+        log.warn(message, e);
+        ErrorResponse error = new ErrorResponse();
+        error.setMessage(message);
+        return error;
     }
 }
